[gd_scene load_steps=9 format=3 uid="uid://duayv708jkwnk"]

[ext_resource type="Texture2D" uid="uid://dly3d0u4nvlxh" path="res://assets/player/parrot.png" id="1_bnf2q"]
[ext_resource type="Script" uid="uid://c8sk2jbnwh7bn" path="res://scenes/Animal/animal.gd" id="1_l01rn"]
[ext_resource type="Texture2D" uid="uid://cnx1g3pjncg1t" path="res://assets/env/items/arrow.png" id="2_te64b"]
[ext_resource type="AudioStream" uid="uid://8qnsp0o6g8u3" path="res://assets/audio/kick_wood.ogg" id="4_t1n8o"]
[ext_resource type="AudioStream" uid="uid://d2kj4c62hccn2" path="res://assets/audio/stretch2.ogg" id="5_nxkr1"]
[ext_resource type="AudioStream" uid="uid://mtsgp35rcq5p" path="res://assets/audio/catapult.ogg" id="6_t0atl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_h3yjk"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_2lpsi"]
radius = 20.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_h3yjk")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_l01rn")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_bnf2q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2lpsi")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -23.0
offset_top = -45.0
offset_right = 23.0
offset_bottom = -22.0
text = "12345"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_te64b")
offset = Vector2(150, 0)

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_t1n8o")

[node name="SteretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_nxkr1")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_t0atl")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
